package aula08.ex1b;

public enum User {
     OWNER, COMPANY
}
