@startuml

title __EX1B's Class Diagram__\n

  package aula08.ex1b {
    interface BankAccount {
        {abstract} + deposit()
        {abstract} + withdraw()
        {abstract} + balance()
    }
  }
  

  package aula08.ex1b {
    class BankAccountImpl {
        - bank : String
        - balance : double
        ~ BankAccountImpl()
        + getBank()
        + deposit()
        + withdraw()
        + balance()
    }
  }
  

  package aula08.ex1b {
    class BankAccountImplProxy {
        + BankAccountImplProxy()
        + deposit()
        + withdraw()
        + balance()
    }
  }
  

  package aula08.ex1b {
    class Company {
        {static} + user : User
        - emps : List<Employee>
        + admitPerson()
        + paySalaries()
        + employees()
    }
  }
  

  package aula08.ex1b {
    class Employee {
        - name : String
        - salary : double
        + Employee()
        + getName()
        + getSalary()
        + getBankAccount()
    }
  }
  

  package aula08.ex1b {
    class Person {
        - name : String
        + Person()
        + getName()
        + getBankAccount()
    }
  }
  

  package aula08.ex1b {
    class SharkCompany {
        {static} + main()
    }
  }
  

  package aula08.ex1b {
    enum User {
      OWNER
      COMPANY
    }
  }
  

  BankAccountImpl -up-|> BankAccount
  BankAccountImplProxy -up-|> BankAccount
  BankAccountImplProxy o-- BankAccount : real_bank_account
  Employee o-- BankAccount : bankAccount
  Person o-- BankAccount : bankAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
